--- a/CSS/products.css
+++ b/CSS/products.css
@@ -372,3 +372,66 @@ body::-webkit-scrollbar-thumb {
     right: -2%;
   }
 }
+
+@media (max-width: 820px) {
+  .products-content {
+    height: 115rem;
+    flex-direction: column;
+    align-items: center;
+    padding: 5rem 0 5rem 10rem;
+  }
+
+  .products-content-left {
+    width: 60%;
+    height: auto;
+    padding: 5rem 0;
+  }
+
+  .products-content-left p {
+    margin: 3rem 0 5rem 0;
+  }
+
+  .products-content-right img:nth-child(1) {
+    width: 22rem;
+    height: 44rem;
+    top: 65%;
+    right: 24%;
+  }
+
+  .products-content-right img:nth-child(2) {
+    width: 12rem;
+    top: 50%;
+    right: 43%;
+  }
+
+  .products-content-right img:nth-child(3) {
+    width: 20rem;
+    bottom: 21%;
+    right: 11%;
+  }
+
+  .products-promo {
+    height: 120vh;
+  }
+
+  .promo-rectangle {
+    width: 40rem;
+    height: 40rem;
+    top: 32%;
+    left: 6%;
+  }
+
+  .small-circle {
+    top: 30%;
+    right: 40%;
+  }
+
+  .large-circle {
+    bottom: 30%;
+    right: 5%;
+  }
+
+  .promo-content h1 {
+    font-size: 2rem;
+  }
+}
