--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -196,3 +196,32 @@ body::-webkit-scrollbar-thumb {
   letter-spacing: 0.1rem;
   cursor: pointer;
 }
+
+/* Responsive */
+@media (max-width: 820px) {
+  .contact {
+    height: 110vh;
+  }
+
+  .contact-header h3 {
+    width: 70%;
+    margin: 2rem auto 15rem auto;
+  }
+
+  .contact-circle {
+    width: 70rem;
+    height: 70rem;
+    bottom: 25%;
+    left: 2%;
+  }
+
+  .contact-form-wrapper {
+    width: 35rem;
+    height: 78rem;
+  }
+
+  .contact-support-form-wrapper {
+    width: 35rem;
+    height: 67rem;
+  }
+}
