--- a/CSS/account.css
+++ b/CSS/account.css
@@ -165,3 +165,38 @@ body::-webkit-scrollbar-thumb {
     left: 23%;
   }
 }
+
+@media (max-width: 768px) {
+  .account-circle {
+    bottom: 30%;
+  }
+}
+
+@media (max-width: 430px) {
+  .account-header h1 {
+    font-size: 4.3rem;
+  }
+
+  .account-header h3 {
+    font-size: 2.5rem;
+    width: 80%;
+    margin: 2rem auto 15rem auto;
+  }
+
+  .account-circle {
+    width: 60rem;
+    height: 60rem;
+    bottom: 34%;
+    left: 10%;
+  }
+}
+
+@media (max-width: 375px) {
+  .account {
+    height: 130vh;
+  }
+
+  .account-form-wrapper {
+    width: 45rem;
+  }
+}
