--- a/CSS/clients.css
+++ b/CSS/clients.css
@@ -144,3 +144,13 @@ body::-webkit-scrollbar-thumb {
     right: 12%;
   }
 }
+
+@media (max-width: 430px) {
+  .testimonials-header h1 {
+    font-size: 4rem;
+  }
+
+  .stars {
+    display: none;
+  }
+}
