--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1509,7 +1509,6 @@ footer {
 
 
 /* Responsive */
-
 @media (max-width: 1600px) {
   html {
     font-size: 60%;
@@ -1531,7 +1530,7 @@ footer {
     width: 70%;
   }
 
-.projects-list {
+  .projects-list {
     width: 80%;
   }
 
@@ -1541,7 +1540,7 @@ footer {
   }
 
   .templates-right img:nth-child(3) {
-    width: 35rem;
+    width: 55rem;
   }
 
   .subscribe {
@@ -1575,7 +1574,7 @@ footer {
   }
 }
 
-@media (max-width: 1336px) {
+@media (max-width: 1366px) {
   html {
     font-size: 56%;
   }
@@ -1742,7 +1741,6 @@ footer {
   }
 }
 
-
 @media (max-width: 820px) {
   .hamburger.navbar {
     background-color: #fff;
@@ -1779,18 +1777,18 @@ footer {
   }
 
   .nav-item:not(:last-child)::before {
-  content: '+';
-  font-size: 4rem;
-  color: #ff4ea0;
-  position: absolute;
-  top: 50%;
-  right: 0;
-  transform: translateY(-50%);
-  width: 10rem;
-  height: 6rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    content: '+';
+    font-size: 4rem;
+    color: #ff4ea0;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    width: 10rem;
+    height: 6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .nav-item.show::before {
@@ -1810,13 +1808,13 @@ footer {
     box-shadow: 0 1rem 10rem rgba(130, 162, 235, 0.2);
   }
 
-  .nav-item::after {
-    display: none;
-  }
-
   .hamburger .nav-item a:not(.nav-btn) {
     color: #092627;
     text-shadow: none;
+  }
+
+  .nav-item::after {
+    display: none;
   }
 
   .nav-btn {
@@ -1867,7 +1865,8 @@ footer {
     padding: 2rem;
   }
 
-  .features-list, .dropdown-services {
+  .features-list,
+  .dropdown-services {
     width: 100%;
     height: 100%;
     display: flex;
@@ -1893,7 +1892,7 @@ footer {
     margin: 0 0.5rem 2rem 0.5rem;
   }
 
-  .dropdown-2 div i{
+  .dropdown-2 div i {
     font-size: 5rem;
   }
 
@@ -1907,6 +1906,7 @@ footer {
     flex-direction: column;
     justify-content: space-between;
     transition: all 0.3s;
+    z-index: 100;
   }
 
   .position.menu-icon {
@@ -1963,11 +1963,7 @@ footer {
     height: 120vh;
   }
 
-  .services-wrapper {
-    z-index: 10;
-  }
-
-  .services .bg-1 {
+  .services-bg-1 {
     top: -20%;
     right: -5%;
   }
@@ -2023,7 +2019,7 @@ footer {
     background: linear-gradient(to bottom, transparent, #8430ea, #863ce0);
   }
 
-  .play-btn {
+  .play-button {
     top: 60%;
     left: -8%;
   }
@@ -2035,5 +2031,239 @@ footer {
 
   .footer-social-media {
     width: 35%;
+  }
+}
+
+@media (max-width: 430px) {
+  html {
+    font-size: 45%;
+  }
+
+  .banner {
+    left: 8%;
+  }
+
+  .bg-main {
+    top: -75%;
+    left: -120%;
+    background: linear-gradient(to left, #4400c5, #4400ab);
+  }
+
+  .bg-2 {
+    left: 20%;
+  }
+
+  .services {
+    height: 240vh;
+  }
+
+  .services-wrapper {
+    z-index: 10;
+  }
+  .services-bg-1 {
+    top: -10%;
+    right: -10%;
+  }
+
+  .services-bg-2 {
+    bottom: -8%;
+  }
+
+  .projects h1 {
+    font-size: 4rem;
+  }
+
+  .projects p {
+    width: 50rem;
+  }
+
+  .filter-nav {
+    height: 15rem;
+    flex-wrap: wrap;
+  }
+
+  .filter-nav-link {
+    margin: 1rem;
+  }
+
+  .templates-left {
+    left: 0;
+    width: 100%;
+    padding: 12rem 5rem 0 5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .templates-left p {
+    text-align: center;
+  }
+
+  .templates-right img:nth-child(1) {
+    width: 23rem;
+    top: 65%;
+    right: 40%;
+  }
+
+  .templates-right img:nth-child(2) {
+    width: 14rem;
+    top: 51%;
+    left: -55%;
+  }
+
+  .templates-right img:nth-child(3) {
+    width: 38rem;
+    top: 55%;
+    right: 10%;
+  }
+
+ .templates::before {
+  right: -7%;
+  bottom: 10%;
+  background: linear-gradient(to left, transparent, #8430ea, #4c0c9b);
+ }
+ .play-button {
+  left: -25%;
+ }
+
+ .play-btn {
+  width: 15rem;
+  height: 15rem;
+ }
+
+ .play-btn::before {
+  width: 19.5rem;
+  height: 19.5rem;
+ }
+
+ .play-btn i {
+  font-size: 5rem;
+ }
+
+ .video {
+  width: 50rem;
+  height: auto;
+  }
+
+  .video-controls {
+    padding: 1rem 0;
+  }
+
+  .video-timer {
+    display: flex;
+  }
+
+  .options.left {
+    width: 40%;
+  }
+
+  .x-btn i {
+    top: -8%;
+  }
+
+  .subscribe-wrapper {
+    width: 50rem;
+  }
+
+  .subscribe-input-group {
+    width: 40rem;
+  }
+
+  footer {
+    height: 45vh;
+    position: relative;
+  }
+
+  .footer-social-media {
+    position: absolute;
+    bottom: 6rem;
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .footer-social-media h3 {
+    margin-right: 5rem;
+  }
+
+  .footer-bottom a {
+    font-size: 1.8rem;
+  }
+
+  .dropdown-service div span:nth-child(2) {
+    display: none;
+  }
+
+  .dropdown-1-right {
+    width: 100%;
+    height: 75%;
+  }
+}
+
+@media (max-width: 375px) {
+  .bg-2 {
+    left: 30%;
+  }
+
+  .nav-item:not(:last-child) {
+    height: 8rem;
+    padding-left: 3rem;
+  }
+
+  .dropdown {
+    top: 8rem;
+  }
+  .dropdown-1 {
+    overflow-y: scroll;
+  }
+
+  .dropdown-2 {
+    height: 52.5rem;
+  }
+
+  .dropdown-2 div {
+    height: auto;
+  }
+
+  .dropdown-2 div i {
+    display: none;
+  }
+
+  .dropdown-2 div p{
+    display: none;
+  }
+
+  .dropdown-3 {
+    height: 45rem;
+  }
+
+  .dropdown-3 div span:nth-child(2) {
+    display: none;
+  }
+
+  .dropdown-5 {
+    height: 30rem;
+    padding: 1.5rem;
+  }
+
+  .nav-item:last-child {
+    height: 10rem;
+  }
+
+  .nav-btn {
+    height: 5rem;
+  }
+
+  .services {
+    height: 350vh;
+  }
+
+  .services-bg-1 {
+    top: -7%;
+  }
+
+  footer {
+    height: 55vh;
   }
 }
